Fix comment full visibility on mobile
fixing comment full visibility on mobile by adding new css params to CommentFooter .

--- a/src/components/CommentFooter/CommentFooter.less
+++ b/src/components/CommentFooter/CommentFooter.less
@@ -4,6 +4,12 @@
   padding: 8px 0;
   color: @blue-botticelli;
   line-height: 14px;
+  
+  span:nth-child(7) > span{
+		display: block;
+		visibility: hidden;
+		line-height: 0.5;
+	  }
 
   &__payout {
     font-weight: bold;
